// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addon Actions Circular Payload 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Circular Payload
</button>
`;

exports[`Storyshots Addon Actions Decorated Action 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  First Argument
</button>
`;

exports[`Storyshots Addon Actions File object as payload 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  File
</button>
`;

exports[`Storyshots Addon Actions Function Name 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Action.name: 
  fnName
</button>
`;

exports[`Storyshots Addon Actions Hello World 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Hello World
</button>
`;

exports[`Storyshots Addon Actions Reserved keyword as name 1`] = `
<button
  className="css-1yjiefr"
  onClick={[Function]}
>
  Delete
</button>
`;
